js/js.translator/testData/incremental/invalidation/functionTypeInterfaceWithCrossModuleInliner/lib2/l2a.15.kt
fun getString(): String {
    val s: suspend (Any, Any, Any, Any, Any) -> Unit = { _, _, _, _, _ -> }
    return "${s::class}"
}
